--- a/configs/pacman.conf
+++ b/configs/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg   = wlroots
+#IgnorePkg   =
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -71,20 +71,20 @@ LocalFileSigLevel = Optional
 
 [nomispaz]
 SigLevel = Optional TrustAll
-Server = file:///home/simonheise/git_repos/arch_localrepo/nomispaz
+Server = file:///mnt/nvme2/git_repos/arch_localrepo/nomispaz
 
 #[core-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [core]
-Include = /home/simonheise/git_repos/nompac_rs/configs/mirrorlist
+Include = /mnt/nvme2/git_repos/nompac_rs/configs/mirrorlist
 #Include =/etc/pacman.d/mirrorlist
 
 #[extra-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [extra]
-Include = /home/simonheise/git_repos/nompac_rs/configs/mirrorlist
+Include = /mnt/nvme2/git_repos/nompac_rs/configs/mirrorlist
 #Include = /etc/pacman.d/mirrorlist
 
 # If you want to run 32 bit applications on your x86_64 system,
@@ -102,7 +102,7 @@ Include = /home/simonheise/git_repos/nompac_rs/configs/mirrorlist
 #SigLevel = Optional TrustAll
 #Server = file:///home/custompkgs
 [multilib]
-Include = /home/simonheise/git_repos/nompac_rs/configs/mirrorlist
+Include = /mnt/nvme2/git_repos/nompac_rs/configs/mirrorlist
 #Include = /etc/pacman.d/mirrorlist
 
 
